--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DATABASE_URL=localhost
-DATABASE_USER=postgres
-DATABASE_PASSWORD=
-DATABASE_NAME=delivery_app
-DATABASE_PORT=5432
+DATABASE_URL="host=localhost user=postgres password= dbname=delivery_app port=5432"
